--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- navbar -->
     <nav class="navbar">
-        <a href="" class="logo">JMK<span>(Jajanan Murah Kekinian)</span>.</a>
+        <a href="" class="logo">JMK<span>(Jajanan Murah Kekinian)</span></a>
 
         <div class="nav">
             <a href="#home">Home</a>
