--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Pertama</title>
+    <title>Warung PKK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="download.jpg">
     <!-- icon -->
