--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="menu-card" id="soda">
                 <img src="media/soda.jpg" alt="" width="160px" height="160px">
-                <h3 class="tittle-menu">Es Teh Soda Lemon</h3>
+                <h3 class="tittle-menu">Es Teh Lemon</h3>
                 <p class="tittle-price">Rp 3.000-</p>
             </div>
         </div>
