--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2><span>Tentang</span>Kami</h2>
         <div class="row">
             <div class="about-img">
-                <img src="media/anggota.png" alt="" width="40%">
+                <img src="media/Stand.jpg" alt="" width="40%">
             </div> 
             <div class="content">
                 <h3>Kenapa Harus Membeli Dagangan Kami?</h3>
