--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <!-- Contact -->
     <section id="contact" class="contact">
         <h2><span>Hubungi</span> Kami</h2>
-        <p>Hubungi Kami Jika Ada Pertanyaan Mengenai Makanan Atau Tentang Stand Dan Jualan Kami</p>
+        <p>Hubungi Kami Jika Ada Pertanyaan Mengenai Makanan Atau Tentang Stand Dan Jualan Kami
+        .<a href="https://wa.me/+6285842291103">Bisa Menghubungi Nomor Ini 083863242827</a></p>
         <div class="row">
 
             <form action="">
